{
    "name": "InputSetting",
    "maps": [
        {
            "name": "Player",
            "id": "dd446f40-3ecb-4151-9dcf-3f54682a4987",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "cb99628a-3262-4c4c-a5b7-1a99e018d5cd",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "17c20351-e1a1-493f-859d-fd07769a9b09",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "2d5275e8-4b7d-4b6d-8d3b-42350cad940c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "be2ebf92-f915-436c-ad11-d26355a4ec0a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "839da525-7e71-41b3-af74-c860d574b154",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "ae46795c-8c40-42a2-97f9-b9e03df6a13a",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b9cf4449-359f-4169-9ef0-12acfd47439c",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Housing",
            "id": "ed04abc9-03c6-4b81-9a90-1e6aa58e7bff",
            "actions": [
                {
                    "name": "ObjectSnap",
                    "type": "Button",
                    "id": "c4a3fb27-b5cd-4391-b491-76952616ee7c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PointerMove",
                    "type": "PassThrough",
                    "id": "49aa872b-1025-4afb-b043-98417fa726e0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e7633393-6ee9-49ff-9211-ff667d1257fb",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ObjectSnap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a5d9b834-2833-4601-9843-ab60931bf9f9",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}